# mStream

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  TODO.md  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: build-rust-parser-musl.yml  build-rust-parser.yml  build-rust-server-audio.yml  build-webapp.yml  build.yml  deploy-demo.yml  npm-publish.yml  publish-api-docs.yml  test-ffmpeg-bootstrap.yml  update-website.yaml
docs/: dlna-todo.md  json_config.md  openapi.yaml  subsonic-phase3.md
rust-parser/: Cargo.toml
rust-parser/src/: main.rs
save/db/: .migrated-from-loki  mstream.db-shm  mstream.db-wal
save/waveforms/: README.md
src/: logger.js  server.js
src/api/: admin.js  album-art.js  auth.js  cuepoints.js  db.js  discogs.js  dlna.js  download.js  federation.js  file-explorer.js  listenbrainz.js  lyrics-lrclib.js  lyrics.js  playlist.js  remote.js  scrobbler.js  server-playback.js  shared.js  smart-playlists.js  transcode.js  user-api-keys.js  user-settings.js  velvet-stubs.js  waveform.js  wrapped.js  ytdl.js
src/api/cli-audio/: base.js  index.js  mpd.js  mplayer.js  mpv.js  vlc.js
src/api/subsonic/: auth.js  handlers.js  identicon.js  index.js  lrc-parser.js  now-playing.js  response.js
src/db/: album-migration.js  artist-extraction.js  audio-hash.js  hash-migration.js  lyrics-extraction.js  manager.js  migrate-from-loki.js  scanner.mjs  schema.js  task-queue.js  waveform-generator-script.js  waveform-generator.js  waveform-lib.js
src/dlna/: dlna-server.js  ssdp.js  time-seek.js
src/state/: config.js  kill-list.js  syncthing.js
src/subsonic/: subsonic-server.js
src/util/: admin.js  ffmpeg-bootstrap.js  m3u.js  validation.js  vpath.js
test/: admin-subsonic-ui.test.mjs  audio-hash-parity.test.mjs  dlna.test.mjs  hash-migration.test.mjs  lyrics-parity.test.mjs  public-mode-library-filter.test.mjs  public-mode-privacy.test.mjs  scanner-follow-symlinks.test.mjs  scanner-parity.test.mjs  subsonic-client-flow.test.mjs  subsonic-info-endpoints.test.mjs  subsonic-jukebox.test.mjs  subsonic-lyrics-lrclib.test.mjs  subsonic-lyrics.test.mjs  subsonic-modes.test.mjs  subsonic-multi-artist.test.mjs  subsonic-phase3.test.mjs  subsonic-polish.test.mjs  subsonic-ui.test.mjs  subsonic.test.mjs  waveform.test.mjs
test/cli-audio/: Dockerfile  entrypoint.sh  mpd.conf  test-routing.mjs
test/helpers/: db-snapshot.mjs  fake-rust-audio.mjs  fixtures.mjs  scanner-fixture.mjs  scanner-runner.mjs  server.mjs  soap.mjs
waveform-cache/: README.md
webapp/: index.html  index.js  package-lock.json  package.json
webapp/admin/: index.css  index.html  index.js
webapp/alpha/: api.js  m.js  spa.css  vp.js
webapp/assets/css/: lang-dropdown.css  mstream-player.css
webapp/assets/js/: api2.js  flags.js  i18n.js  lang-dropdown.js  (+3 more)
webapp/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  languages.json  nl.json  pl.json  pt.json  ru.json  zh.json
webapp/login/: index.html  index.js
webapp/remote/: index.css  index.html
webapp/subsonic/: NOTICE.md  env.js  index.html
webapp/velvet/: app.js
(+7 files in other folders)
