[package]
name = "rust-parser"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-parser"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.33", features = ["bundled"] }
lofty = "0.22"
walkdir = "2"
# RustCrypto's MD5 impl. The older `md5` crate (0.7) is marked unmaintained
# (RUSTSEC informational — MD5 isn't used for security here, only content
# addressing for cache keys + JS parity). `md-5` exports its library as
# `md5`, so call sites still `use md5::{Md5, Digest}`.
md-5 = "0.10"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
# Pure-Rust audio decoder used to build the 800-bar waveform cache during a
# scan. Codec features cover every extension in supportedAudioFiles
# (src/state/config.js) EXCEPT .opus — symphonia 0.5 has no pure-Rust Opus
# decoder yet and we deliberately avoid linking libopus / a C library. Opus
# files are detected at scan time and skipped here; their waveforms are
# generated on first play by the on-demand GET /api/v1/db/waveform endpoint
# (which falls back to ffmpeg).
symphonia = { version = "0.5", default-features = false, features = [
    "mp3",
    "flac",
    "pcm",     # required for WAV — the `wav` feature is the container
               # reader; `pcm` is the actual sample decoder.
    "vorbis",
    "aac",
    "alac",
    "isomp4",
    "ogg",
    "wav",
] }

[profile.release]
strip = true
